# libris

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  main.py  manifest  pyproject.toml
.beads/: metadata.json
src/libris/: __init__.py  api.py  audible_client.py  cli.py  config.py  markdown.py
tests/: conftest.py  test_api.py  test_api_retry.py  test_audible_auth.py  test_audible_client.py  test_cli.py  test_duplicates.py  test_markdown.py
